# nowcast

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
crates/nowcast-cli/: Cargo.toml
crates/nowcast-cli/src/: main.rs
crates/nowcast-core/: Cargo.toml
crates/nowcast-core/examples/: atacama_subdaily.rs  backtest.rs  backtest_distributed.rs  bench.rs  bench_backtest.rs  bench_parallel.rs  calibrate_maipo.rs  calibrated_probability.rs  daily_skill_synthetic.rs  dual_threshold.rs  dump_hazard.rs  ensemble_nowcast.rs  explain_alert.rs  live_loop.rs  multi_event_leadtime.rs  published_thresholds.rs  quickstart.rs  resolution_headtohead.rs  synthetic_resolution.rs
crates/nowcast-core/src/: backtest.rs  calibrate.rs  ensemble.rs  error.rs  explain.rs  forcing.rs  grid.rs  lib.rs  live.rs  multi.rs  nowcast.rs  threshold.rs  trigger.rs
crates/nowcast-firespread/: Cargo.toml
crates/nowcast-firespread/examples/: couple_fire.rs
crates/nowcast-firespread/src/: lib.rs
crates/nowcast-hydroflux/: Cargo.toml
crates/nowcast-hydroflux/examples/: couple_flood.rs  couple_ondemand.rs
crates/nowcast-hydroflux/src/: lib.rs
crates/nowcast-insar/: Cargo.toml
crates/nowcast-insar/examples/: rain_and_creep.rs
crates/nowcast-insar/src/: lib.rs
crates/nowcast-python/: Cargo.toml  pyproject.toml
crates/nowcast-python/src/: lib.rs
crates/nowcast-rainflow/: Cargo.toml
crates/nowcast-rainflow/examples/: itata_flood.rs  itata_validation.rs
crates/nowcast-rainflow/src/: lib.rs
crates/nowcast-snowmelt/: Cargo.toml
crates/nowcast-snowmelt/examples/: rain_on_snow.rs
crates/nowcast-snowmelt/src/: lib.rs
crates/nowcast-surtgis/: Cargo.toml
crates/nowcast-surtgis/examples/: geotiff_roundtrip.rs
crates/nowcast-surtgis/src/: lib.rs
crates/nowcast-swarm/: Cargo.toml
crates/nowcast-swarm/examples/: couple_runout.rs  runout_ondemand.rs
crates/nowcast-swarm/src/: lib.rs
data/: README.md
docs/: auditoria-motor.md  checklist-hermanas.md  index.html  paper-outline.md  sota-roadmap.md
docs/paper/: baseline.py  bootstrap_auc.py  cover-letter.tex  figs.R  nowcast-cageo.md  nowcast-cageo.tex  refs.bib  review-cageo-simulated.md
monitor/: README.md  config.env  fetch_dga.py  fetch_goes_qpe.py  fetch_imerg_early.py  forecast_gfs.py  monitor.sh  prepare_fusion.py  replay_event.py  runout_localidad.py  selftest.py  susc_overlay.py
monitor/report/: INFORME-EVENTO-TEMPLATE.md  build_registro.py  collect_event.sh
monitor/systemd/: nowcast-forecast.service  nowcast-forecast.timer  nowcast-monitor.service  nowcast-monitor.timer  nowcast-monitor@.service  nowcast-monitor@.timer
scripts/: check_siblings.sh  extract_atacama_cr2met.py  extract_atacama_imerg.py  extract_event_imerg.py  extract_maipo_cr2met.py  extract_maipo_distributed.py  subdaily_falsealarm.py
