[workspace]
resolver = "3"
members = [
    "crates/nowcast-core",
    "crates/nowcast-snowmelt",
    "crates/nowcast-rainflow",
    "crates/nowcast-hydroflux",
    "crates/nowcast-surtgis",
    "crates/nowcast-swarm",
    "crates/nowcast-insar",
    "crates/nowcast-firespread",
    "crates/nowcast-cli",
    "crates/nowcast-python",
]
# The PyO3 cdylib is built by maturin, not the default cargo gate, so it is kept
# out of `default-members` (bare `cargo build`/`test`/`clippy` stay offline and
# need no Python build environment).
default-members = [
    "crates/nowcast-core",
    "crates/nowcast-snowmelt",
    "crates/nowcast-rainflow",
    "crates/nowcast-hydroflux",
    "crates/nowcast-surtgis",
    "crates/nowcast-swarm",
    "crates/nowcast-insar",
    "crates/nowcast-firespread",
    "crates/nowcast-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Francisco Parra-O."]
repository = "https://github.com/franciscoparrao/nowcast"

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
# One workspace-wide ndarray so `Array2` unifies across every adapter↔engine
# boundary by construction (it must stay semver-compatible with the sibling
# engines' own ndarray).
ndarray = "0.16"

[profile.release]
lto = true
codegen-units = 1
