[package]
name = "nowcast-core"
description = "Dynamic geohazard nowcasting engine: susceptibility × dynamic trigger (rainfall / snowmelt) → time-varying hazard probability."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
rayon = { version = "1", optional = true }

[features]
# Off by default so the core builds and tests offline with std only. With
# `--features parallel`, `Nowcast::run` parallelises the (independent) per-step
# loop with Rayon; the prefix-sum buffer is read-only and shared across threads.
parallel = ["dep:rayon"]

[dev-dependencies]
