[package]
name = "nowcast-firespread"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wildfire hazard path + post-fire susceptibility cascade for the nowcast engine."

[dependencies]
nowcast-core = { path = "../nowcast-core" }
# Sibling wildfire engine (firespread workspace): Rothermel surface spread +
# minimum-travel-time front propagation. ndarray must stay semver-compatible so
# `Array2` unifies across the boundary.
firespread-core = { path = "../../../firespread/crates/firespread-core" }
