[package]
name = "nowcast-surtgis"
description = "Geospatial bridge: convert SurtGIS georeferenced rasters to/from nowcast susceptibility, forcing and hazard fields (GeoTIFF in/out)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nowcast-core = { path = "../nowcast-core" }
# Geospatial substrate of the family. Native GeoTIFF I/O (no GDAL by default).
# ndarray must be semver-compatible so `Array2` unifies across the boundary.
surtgis-core = { path = "../../../surtgis/crates/core" }
ndarray = "0.16"
thiserror.workspace = true
